# Lispp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lisp.cpp  lisp.h  main.cpp
.github/workflows/: build.yml
test/: CMakeLists.txt  Common.h  TestEval.cpp  TestRead.cpp
